# homey-assistant-agent

./: .env.example  Dockerfile  PROVIDER_CONFIGURATION.md  README.md  agent.py  agent_g.py  agent_tts_stt_g.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: build-image.yml
homey_assistant/: __init__.py
homey_assistant/agent/: __init__.py  assistant.py  session.py
homey_assistant/config/: __init__.py  constants.py  mcp_config.py  providers.py
homey_assistant/utils/: __init__.py  logging.py
tests/: conftest.py  test_assistant.py  test_constants.py  test_integration.py  test_logging.py  test_mcp_config.py  test_session_manager.py
tests/fixtures/: invalid_mcp_config.json  valid_mcp_config.json
